                     
25 Feb, 2019   'new tooltip and translation corrections'
               - Added new tranlsation to the po file
               - Some translations are corrected (in po file and in Repository)

25 Feb, 2019   'testing in PHP 5.5'
               - more commit 
               - empty function does not work in old PHP. I changed to a more stable function.
               - Change theme description and add PHP 5.5. compatibility 

26 Feb, 2019   'deletions'
               - delete unused files in more commits.
               
28 Feb, 2019   'depreciate smart underline'
                  - browsers now support nice underline. This script is not necessary any longer.
                  
1 Mar, 2019    'delete debug codes'

5 Mar, 2019    'link functions enhancement'
                  - in case of pdf etc file types, external link not indicated. Corrected
                  - Also inlcluded external pdf link in link sample.

6 Mar, 2019    'Add cookie consent to reading option'
                  - Manduca does not use cookies, except when you set non-default reading options.
                  - This fact is written below reading options.
                  - Reading options heading1 also hidden from screen-reader users.
                  - Translations added.

6 Mar, 2019    'Css and translations fixings'

6 Mar, 2019    'aria-selected to reading options'
               - in order to announce the selected reading option to screen reader users. 

6 Mar, 2019    'link target indication enhancement'
                  - If you choose link target self, then the links should not be signed as open in new window
                  - if you choose blank, then each link should be indicated as open in new window.
                  - This is php development, so next pageload will takes effect.
                  
6 mar, 2019    'links use not-signed class are ignored'
                  Link Function now has this escape if you want something to ignore. 
